# ap06-planner

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: Mendrix_soap_customlink_docs.md
skills/: README.md  python-best-practices.md
src/ap06_planner/: __init__.py  main.py
src/ap06_planner/models/: schemas.py
src/ap06_planner/pages/: beheer.py  planning.py
src/ap06_planner/parsers/: tijdvenster.py  wijzigingen.py  xlsx_parser.py
src/ap06_planner/services/: claude_service.py  db_service.py  gdrive_service.py  log_service.py  mendrix_service.py  nager_service.py  osrm_service.py  textmebot_service.py
src/ap06_planner/utils/: date_utils.py
tests/: test_beheer_logic.py  test_claude_service.py  test_date_utils.py  test_db_service.py  test_gdrive_service.py  test_log_service.py  test_mendrix_service.py  test_nager_service.py  test_osrm_service.py  test_planning_logic.py  test_textmebot_service.py  test_tijdvenster.py  test_wijzigingen.py  test_wijzigingen_extra.py  test_xlsx_parser.py  test_xlsx_parser_extra.py
tests/helpers/: beheer_lege_db.py  beheer_met_data.py
