[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ap06-planner"
version = "0.1.0"
description = "AP06 monster ophaalplanning — verwerkt xlsx planningen naar rijinstructies"
requires-python = ">=3.11"
dependencies = [
    "streamlit==1.58.0",
    "anthropic==0.105.2",
    "openpyxl>=3.1.5",
    "requests>=2.32.0",
    "python-dotenv>=1.0.1",
    "pandas>=2.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff==0.15.14",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "RET", "SIM", "TID"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
omit = ["*/ap06_planner/main.py"]
